--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,1 +1,142 @@
+*{
+    font-family: 'Ubuntu', sans-serif;
+    padding: 0;
+    margin: 0;
+}
+
+.container{
+ 
+    display: flex;    /* flex box */
+    min-height: 100vh;    /* view for height => supaya tinggiya memenuhi screen dari layarnya */
+}
+
+
+.sidebar{
+    background-color: #0E1F40  ;
+    width: 460px;
+    padding: 30px;
+    display: flex; 
+    box-sizing: border-box;
+    flex-direction: column;
+    justify-content: stretch;
+}
+
+.sidebar a{
+    text-decoration: none;
+}
+
+.header{
+    margin-bottom: 25px;
+    padding: 15px 10px;
+}
+
+.sidebar .header .list-item{
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box;
+} 
+
+.sidebar .header .list-item .icon{
+    margin-right: 25px;
+}
+
+.sidebar .header .list-item .description-header{
+    font-size:35px;
+    color: #ffffff;
+    font-weight: 600;
+
+}
+
+.searchbar{
+    display: flex;
+    flex-direction: row;
+    padding: 15px 10px;
+    margin-bottom: 25px;
+    align-items: center;
+} 
+
+.searchbar .searchbtn{
+    width: 50px;  
+    display: flex; 
+    align-items: center;
+    border: 1px solid white;
+    justify-content: center; 
+    border-radius: 8px 0 0 8px; 
+    border-right: none;
+    cursor: pointer
+}
+
+.searchbar .searchbtn img{
+    width: 35px;
+}
+
+.searchbar input { 
+    color: #ffffff;
+    width: 300px; 
+    font-weight: 100;
+    border-radius: 0px 8px 8px 0px; 
+    border: 1px solid white;
+    font-size: 20px;
+    border-left: none;
+    outline: none;
+}
+
+.searchbar input, .searchbtn{
+    height: 42px;
+    box-sizing: border-box;
+    background-color: var(--background-color3); 
+}
+
+.main {
+    margin-bottom: 25px;
+}
+
+.main h4{
+    color: #ffffff;
+}
+.main .list-item {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    box-sizing: border-box;
+    padding: 10px 10px;
+    margin-bottom: 15px;
+} 
+
+.sidebar .main .list-item .icon2{
+    margin-right: 25px;
+    width: 53px;
+    height: 59px;
+    background-color: var(--background-color3);
+}
+
+.sidebar .main .list-item .description {
+    font-weight: 100;
+    font-size: 20px;
+    color: #ffffff;
+}
+
+.sidebar .main a:hover{
+    background: #2E5DB7;
+    transition: all ease-in .2s;
+}
+
+
+.headbar{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 150px;
+    background-color: #0E1F40  ;
+    align-items: last baseline;
+}
+
+.headbar .searchbar{
+    margin-left: 35px;
+}
+
+.main-content{
+    background-color: #ffffff;
+    flex-grow: 1;
+}
 
