--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,50 +2,114 @@
     font-family: 'Ubuntu', sans-serif;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
-.container{
- 
+body{
     display: flex;    /* flex box */
     min-height: 100vh;    /* view for height => supaya tinggiya memenuhi screen dari layarnya */
 }
 
 
-.sidebar{
+aside{
     background-color: #0E1F40  ;
-    width: 460px;
-    padding: 30px;
+    width: 360px;
+    padding: 25px;
     display: flex; 
-    box-sizing: border-box;
     flex-direction: column;
-    justify-content: stretch;
+    box-sizing: border-box;
+    gap: 25px;
 }
 
-.sidebar a{
+aside header{
+    display: flex;
+    box-sizing: border-box;
+    /* margin-bottom: 25px; */
+    /* padding: 15px 10px; */
+    gap: 20px;
+    padding: none;
+}
+
+/* .sidebar .header .list-item{
+
+}  */
+
+/* .sidebar .header .list-item .icon{
+    margin-right: 25px;
+} */
+
+aside header h2{
+    font-size: 30px;
+    color: #ffffff;
+    font-weight: 600;
+}
+
+/* .main {
+    margin-bottom: 25px;
+} */
+
+nav{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    padding: none;
+}
+
+nav section{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+nav section .list-item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 10px 10px;
+    gap: 20px;
+} 
+
+nav h4{
+    color: #ffffff;
+}
+
+nav section .list-item .icon2{
+    width: 53px;
+    height: 59px;
+    background-color: var(--background-color3);
+}
+
+nav section .list-item .description {
+    font-weight: 100;
+    font-size: 20px;
+    color: #ffffff;
+}
+
+nav section a{
     text-decoration: none;
 }
 
-.header{
-    margin-bottom: 25px;
-    padding: 15px 10px;
+nav section a:hover{
+    background: #2E5DB7;
+    transition: all ease-in .2s;
 }
 
-.sidebar .header .list-item{
+
+header{
     display: flex;
     flex-direction: row;
-    box-sizing: border-box;
-} 
-
-.sidebar .header .list-item .icon{
-    margin-right: 25px;
+    width: 100%;
+    height: 150px;
+    background-color: #0E1F40  ;
+    align-content: center;
+    justify-content: space-between;
+    padding: 20px;
 }
 
-.sidebar .header .list-item .description-header{
-    font-size:35px;
-    color: #ffffff;
-    font-weight: 600;
-
-}
+/* .headbar .searchbar{
+    
+} */
 
 .searchbar{
     display: flex;
@@ -53,6 +117,7 @@
     padding: 15px 10px;
     margin-bottom: 25px;
     align-items: center;
+    /* margin-left: 35px; */
 } 
 
 .searchbar .searchbtn{
@@ -87,56 +152,11 @@
     background-color: var(--background-color3); 
 }
 
-.main {
-    margin-bottom: 25px;
-}
-
-.main h4{
-    color: #ffffff;
-}
-.main .list-item {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    box-sizing: border-box;
-    padding: 10px 10px;
-    margin-bottom: 15px;
-} 
-
-.sidebar .main .list-item .icon2{
-    margin-right: 25px;
-    width: 53px;
-    height: 59px;
-    background-color: var(--background-color3);
-}
-
-.sidebar .main .list-item .description {
-    font-weight: 100;
-    font-size: 20px;
-    color: #ffffff;
-}
-
-.sidebar .main a:hover{
-    background: #2E5DB7;
-    transition: all ease-in .2s;
-}
-
-
-.headbar{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 150px;
-    background-color: #0E1F40  ;
-    align-items: last baseline;
-}
-
-.headbar .searchbar{
-    margin-left: 35px;
-}
-
-.main-content{
+main{
     background-color: #ffffff;
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 35px;
 }
 
