--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,12 +13,12 @@ body{
 
 aside{
     background-color: #0E1F40  ;
-    width: 360px;
-    padding: 25px;
+    width: 400px;
+    padding: 35px 25px;
     display: flex; 
     flex-direction: column;
     box-sizing: border-box;
-    gap: 25px;
+    gap: 60px;
 }
 
 aside header{
@@ -26,17 +26,16 @@ aside header{
     box-sizing: border-box;
     /* margin-bottom: 25px; */
     /* padding: 15px 10px; */
-    gap: 20px;
+    gap: 25px;
     padding: none;
 }
 
-/* .sidebar .header .list-item{
 
-}  */
-
-/* .sidebar .header .list-item .icon{
-    margin-right: 25px;
-} */
+aside .icon{
+    width: 150px;
+    height: 150px;
+    background-color: var(--background-color3);
+}
 
 aside header h2{
     font-size: 30px;
@@ -44,21 +43,18 @@ aside header h2{
     font-weight: 600;
 }
 
-/* .main {
-    margin-bottom: 25px;
-} */
 
 nav{
     display: flex;
     flex-direction: column;
-    gap: 25px;
+    gap: 60px;
     padding: none;
 }
 
 nav section{
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 30px;
 }
 
 nav section .list-item {
@@ -66,7 +62,6 @@ nav section .list-item {
     flex-direction: row;
     align-items: center;
     box-sizing: border-box;
-    padding: 10px 10px;
     gap: 20px;
 } 
 
@@ -80,7 +75,27 @@ nav section .list-item .icon2{
     background-color: var(--background-color3);
 }
 
-nav section .list-item .description {
+nav ul{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-left: 40px;
+    color: #ffffff;
+}
+
+nav section li .list-item .icon2{
+    width: 33px;
+    height: 39px;
+    background-color: var(--background-color3);
+}
+
+nav .list-item .description {
+    font-weight: 600;
+    font-size: 20px;
+    color: #ffffff;
+}
+
+nav li .list-item .description {
     font-weight: 100;
     font-size: 20px;
     color: #ffffff;
@@ -96,14 +111,14 @@ nav section a:hover{
 }
 
 
-header{
+.header2{
     display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 150px;
-    background-color: #0E1F40  ;
-    align-content: center;
+    align-items: flex-end;
     justify-content: space-between;
+    width: 100%;
+    height: 130px;
+    background-color: #0E1F40  ;
+    color: #ffffff;
     padding: 20px;
 }
 
@@ -114,10 +129,7 @@ header{
 .searchbar{
     display: flex;
     flex-direction: row;
-    padding: 15px 10px;
-    margin-bottom: 25px;
     align-items: center;
-    /* margin-left: 35px; */
 } 
 
 .searchbar .searchbtn{
@@ -152,11 +164,14 @@ header{
     background-color: var(--background-color3); 
 }
 
+.profile{
+    height: 50px;
+}
+
 main{
     background-color: #ffffff;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    padding: 35px;
 }
 
