--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,58 +5,81 @@
     box-sizing: border-box;
 }
 
+li{
+    list-style: none;
+}
 body{
     display: flex;    /* flex box */
     min-height: 100vh;    /* view for height => supaya tinggiya memenuhi screen dari layarnya */
 }
 
-
-aside{
+#side-bar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2000;
     background-color: #0E1F40  ;
-    width: 300px;
-    padding: 35px 25px;
+    width: 260px;
+    height: 100%;
+    padding: 30px 20px;
     display: flex; 
     flex-direction: column;
-    box-sizing: border-box;
-    gap: 60px;
+    gap: 50px;
+    transition: all ease-in .3s;
+    overflow-x: hidden;
 }
 
-aside header{
+#side-bar::-webkit-scrollbar {
+	display: none;
+}
+
+#side-bar.hide {
+    width: 80px;
+    transition: all ease-out .3s;
+}
+
+#side-bar .sidebar-header{
     display: flex;
-    box-sizing: border-box;
-    gap: 25px;
-    padding: none;
+    gap: 20px;
+    padding: 0;
 }
 
+#side-bar.hide .sidebar-header{
+    display: none;
+}
 
-aside .icon{
-    width: 110px;
+#side-bar .icon{
+    width: 100px;
     height: 110px;
     background-color: var(--background-color3);
 }
 
-aside header h2{
-    font-size: 23px;
+#side-bar .sidebar-header h2{
+    font-size: 20px;
     color: #ffffff;
     font-weight: 600;
 }
 
-
-nav{
+.nav-sidebar{
     display: flex;
     flex-direction: column;
-    /* padding: none; */
+    padding: 0;
     box-sizing: border-box;
-    gap: 25px;
+    gap: 65px;
 }
 
-nav section{
+#side-bar.hide .nav-sidebar{
+    margin-top: 30px;
+}
+
+
+.nav-sidebar section{
     display: flex;
     flex-direction: column;
     gap: 25px;
 }
 
-nav section .list-item {
+.list-item {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -64,123 +87,145 @@ nav section .list-item {
     gap: 20px;
 } 
 
-nav h5{
+#side-bar h5{
     color: #ffffff;
 }
 
-nav section .list-item .icon2{
-    width: 33px;
-    height: 39px;
-    background-color: var(--background-color3);
+#side-bar.hide h5{
+    display: none;
 }
 
-nav ul{
+.nav-sidebar ul{
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    margin-left: 10px;
+    gap: 25px;
+    margin-left: 5px;
     color: #ffffff;
     list-style: none;
 }
 
-nav section li .list-item .icon2{
-    width: 23px;
-    height: 23px;
+li .list-item .icon2{
+    width: 30px;
+    height: 36px;
     background-color: var(--background-color3);
 }
 
-nav .list-item .description {
-    font-weight: 600;
-    font-size: 18px;
-    color: #ffffff;
-}
 
-nav li .list-item .description {
-    font-weight: 100;
-    font-size: 18px;
+li .list-item .description {
+    font-weight: 500;
+    font-size: 15px;
     color: #ffffff;
-}
-
-nav a{
-    text-decoration: none;
     cursor: pointer;
 }
 
-nav section a:hover{
+#side-bar.hide li .list-item .description {
+    display: none;
+}
+
+#side-bar .nav-sidebar li a{
+    text-decoration: none;
+}
+
+
+#side-bar section a:hover{
     background: #2E5DB7;
     transition: all ease-in .2s;
+    border-radius: 15px;
 }
 
-
-main{
-    background-color: #ffffff;
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
+#content{
+    position: relative;
+    width: calc(100% - 260px);
+    left: 260px;
+    transition: all ease-in .3s;
 }
 
-main header{
+#side-bar.hide ~ #content {
+    width: calc(100% - 80px);
+    left: 80px;
+    transition: all ease-out .3s;
+}
+
+#content .head-main{
     display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
-    width: 100%;
-    height: 110px;
+    align-items: center;
+    grid-gap: 40px;
     background-color: #0E1F40  ;
     color: #ffffff;
     padding: 20px;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 1000;
 }
 
+#content .head-main .bx.bx-menu{
+    cursor: pointer;
+}
 
-.searchbar{
+#content .head-main .form{
+    max-width: 400px;
+    width: 100%;
+    margin-right: auto;
+}
+
+#content .head-main .searchbar{
     display: flex;
-    flex-direction: row;
     align-items: center;
+    height: 35px;
 } 
 
-.searchbar .searchbtn{
-    width: 50px;  
-    display: flex; 
-    align-items: center;
-    border: 1px solid white;
-    justify-content: center; 
-    border-radius: 0px 8px 8px 0px; 
-    border-left: none;
-    cursor: pointer
-}
-
-.searchbar .searchbtn img{
-    width: 25px;
-}
-
-.searchbar input { 
-    color: #ffffff;
-    width: 250px; 
-    font-weight: 100;
-    border-radius: 8px 0px 0px 8px; 
-    border: 1px solid white;
-    font-size: 18px;
-    padding-left: 10px;
-    border-right: none;
+#content .head-main form .searchbar input {
+    flex-grow: 1;
+    padding: 0 16px;
+    height: 100%;
+    border: none;
+    background-color: #d1d9e9;
+    border-radius: 35px 0 0 35px;
+    width: 100%;
     outline: none;
 }
 
-.searchbar input, .searchbtn{
-    height: 32px;
-    box-sizing: border-box;
-    background-color: var(--background-color3); 
+#content .head-main form .searchbar .searchbtn {
+    width: 35px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #3375F4;
+    color: #d1d9e9;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    border-radius: 0 35px 35px 0px;
+    cursor: pointer;
 }
 
-.profile{
-    height: 40px;
+#content .head-main .profile{
+    width: 46px;
+	height: 46px;
+	object-fit: cover;
+	border-radius: 50%;
 }
 
-.main_content{
+#content .main_content{
     display: flex;
     flex-direction: column;
+    width: 100%;
     padding: 45px;
-    box-sizing: border-box;
     gap: 65px;
+}
+
+.main_content .dash-head{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.main_content .dash-head h3{
+    font-size: 35px;
+    font-weight: 600;
+    color: #0f357b;
 }
 
 .filt{
@@ -193,40 +238,40 @@ main header{
 .filt select, button{
     background-color: #f5f5f5;
     border: none;
-    font-size: 18px;
-    font-weight: 400;
+    color: #0f357b;
+    font-size: 16px;
+    font-weight: 500;
 }
 
 .filt select{
-    height: 40px;
-    width: 200px;
+    height: 35px;
+    width: 190px;
     border-radius: 9px;
 
 }
 
 .filt button{
-    height: 40px;
-    width: 60px;
+    height: 35px;
+    width: 55px;
     border-radius: 5px;
     cursor: pointer;
 }
 
-.card-score{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+#content .main_content .card-score {
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    justify-items: center;
+    grid-gap: 30px;
 }
 
-.box-scorecard{
+#content .main_content .card-score .box-scorecard{
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 296px;
-    height: 126px;
+    padding: 24px;
     border: 0.5px solid #d1d9e9;
     border-radius: 15px;
     background: linear-gradient(to right, #3375F4 0%, #ffffff 100%, #3375F4 100%, #ffffff 100%);
-    z-index:auto;
     gap: 30px;
 }
 
@@ -234,6 +279,11 @@ main header{
     display: flex;
     flex-direction: column;
     gap: 4px;
+}
+
+.value label{
+    font-size: 15px;
+    font-weight: 700;
 }
 
 .chart{
@@ -277,7 +327,12 @@ main header{
     grid-area: c4;
 }
 
-main footer{
+.c label{
+    color: #0f357b;
+    font-weight: 500;
+}
+
+.footer{
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -285,34 +340,35 @@ main footer{
     padding: 70px 30px 20px;
 }
 
-footer .cite{
+.cite{
     grid-area: f1;
     align-content: end;
 }
 
-footer .media{
+.media{
     grid-area: f2;
 }
 
-footer .socialIcn{
+.socialIcn{
     display: flex;
     justify-content: end;
     gap: 10px;
 }
 
-footer .socialIcn a{
+.socialIcn a{
     text-decoration: none;
     padding: 10px;
     background-color: #d1d9e9;
     border-radius: 50%;
 }
 
-footer .socialIcn a:hover{
+.socialIcn a:hover{
     background-color: #2E5DB7;
     transition: 0.5s;
 }
 
-footer .socialIcn a:hover i{
+.socialIcn a:hover i{
     color: #ffffff;
     transition: 0.5s;
 }
+
