--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -10,7 +10,7 @@
         background-color: var(--background-color3);
     }
     
-    #side-bar .sidebar-header h2{
+    #side-bar .sidebar-header h4{
         font-size: 15px;
         color: #ffffff;
         font-weight: 500;
@@ -21,12 +21,20 @@
         left: 210px;
     }
 
+    #content .head-main form .searchbar .searchbtn{
+        color: #3375F4;
+    }
+
+    .main_content .dash-head h3{
+        font-size: 18px;
+    }
+
     .cite{
-        font-size: 10px;
+        font-size: 13px;
     }
     
     .socialIcn{
-       font-size: 10px;
+       font-size: 13px;
     }
 
     #content .main_content .card-score .box-scorecard{
@@ -47,6 +55,10 @@
     .c{
         width: 230px;
         height: 100%;
+    }
+
+    .c label {
+        font-size: 17px;
     }
 
 }
@@ -87,6 +99,10 @@
         gap: 15px;
     }
 
+    .main_content .dash-head h3{
+        font-size: 15px;
+    }
+
     #content .main_content .card-score .box-scorecard{
         width:100%;
         height: 100px;
@@ -97,15 +113,29 @@
         grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
         justify-items: center;
         grid-template-areas: 
-        "c1" "c2" 
-        "c3" "c4";
+        "c1" 
+        "c2" 
+        "c3" 
+        "c4";
         gap: 35px;
         margin-bottom: 25px;
     }
 
     .c{
-        width: 300px;
+        width: 100%;
         height: 150px;
+    }
+
+    .c label {
+        font-size: 15px;
+    }
+
+    .cite{
+        font-size: 10px;
+    }
+    
+    .socialIcn{
+       font-size: 10px;
     }
     
 }
