--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,20 +41,21 @@ body{
 
 #side-bar.active {
     width: 260px;
-    gap: 40px;
+    padding: 10px 20px;
+    gap: 20px;
     overflow-x: hidden;
 }
 
 #side-bar .sidebar-header{
     display: flex;
     width: 100%;
-    gap: 20px;
+    gap: 10px;
     padding: 0;
 }
 
 #side-bar .icon{
-    width: 70px;
-    height: 88px;
+    width: 50px;
+    height: 69px;
     background-color: var(--background-color3);
     transition: .3s;
     opacity: 0;
@@ -66,7 +67,10 @@ body{
 }
 
 #side-bar .sidebar-header h4{
-    font-size: 17px;
+    font-size: 12px;
+    height: 70px;
+    display: flex;
+    align-items: center;
     color: #ffffff;
     font-weight: 600;
     transition: .3s;
@@ -83,17 +87,23 @@ body{
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    display: flex;
     width: 40px;
-    height: 40px;
+    height: 65px;
     font-size: 27px;
+    padding-left: 9px;
     color: #fff;
     text-align: center;
     cursor: pointer;
     transition: .5s;
+    /* background-color: #c0c0c0; */
 }
 
 #side-bar.active .sidebar-header .toogle-btn{
-    left: 90%
+    display: flex;
+    align-items: center;
+    padding: 0px;
+    left: 95%
 }
 
 
@@ -231,6 +241,24 @@ li .list-item .description {
     outline: none;
     border-radius: 0 35px 35px 0px;
     cursor: pointer;
+}
+
+#content .head-main .logoo{
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    padding-top: 0;
+}
+
+#content .head-main .logoo .font{
+    width: 70px;
+    font-size: 14px;
+    justify-content: center;
+    font-weight: 300;
+}
+
+#content .head-main .logoo .font .jayapura{
+    font-weight: 600;
 }
 
 #content .head-main .team4 {
