--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -5,19 +5,28 @@
     }
 
     #side-bar .icon{
-        width: 70px;
-        height: 80px;
+        width: 60px;
+        height: 70px;
         background-color: var(--background-color3);
     }
     
     #side-bar .sidebar-header h4{
-        font-size: 15px;
+        font-size: 12px;
+        width: 200px;
         color: #ffffff;
         font-weight: 500;
     }
 
+    #side-bar h5 {
+        font-size: 13px;
+    }
+
+    #side-bar ul li label {
+        font-size: 13px;
+    }
+
     .main_content .dash-head h3{
-        font-size: 18px;
+        font-size: 14px;
     }
 
     .cite{
@@ -33,24 +42,26 @@
     }
 
     .chart-grid{
-        display: grid;
-        position: relative;
-        grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
-        justify-items: center;
+        width: 90%;
+        height: 100vb;
+        grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+        grid-template-rows: none;
         grid-template-areas: 
-            "c1 c2" 
-            "c3 c4";
+        "c1" 
+        "c2" 
+        "c3" 
+        "c4";
         gap: 25px;
-        margin-bottom: 25px;
+        margin-bottom: 15px;
     }
 
     .c{
-        width: 230px;
+        width: 100%;
         height: 100%;
     }
 
     .c label {
-        font-size: 17px;
+        font-size: 13px;
     }
 
 }
@@ -100,17 +111,15 @@
         gap: 15px;
     }
 
-    .main_content .dash-head h3{
-        font-size: 15px;
-    }
-
     #content .main_content .card-score .box-scorecard{
         width:100%;
         height: 100px;
     }
 
     .chart-grid{
-        grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+        width: 100%;
+        height: 100vb;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         grid-template-rows: none;
         justify-items: center;
         grid-template-areas: 
@@ -118,13 +127,13 @@
         "c2" 
         "c3" 
         "c4";
-        gap: 35px;
-        margin-bottom: 25px;
+        gap: 15px;
+        margin-bottom: 0%;
     }
 
     .c{
         width: 100%;
-        height: 150px;
+        height: 100%;
     }
 
     .c label {
