--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -121,6 +121,7 @@
     #content .main_content .dash-head{
         display: flex;
         flex-direction: column;
+        align-items: center;
         justify-content: center;
         gap: 15px;
     }
