--- a/src/css/style.css
+++ b/src/css/style.css
@@ -220,44 +220,6 @@ li .list-item .description {
     cursor: pointer;
 }
 
-#content .head-main .form{
-    max-width: 400px;
-    width: 100%;
-    margin-right: auto;
-}
-
-#content .head-main .searchbar{
-    display: flex;
-    align-items: center;
-    height: 35px;
-} 
-
-#content .head-main form .searchbar input {
-    flex-grow: 1;
-    padding: 0 16px;
-    height: 100%;
-    border: none;
-    background-color: #ffffff;
-    border-radius: 35px 0 0 35px;
-    width: 100%;
-    outline: none;
-}
-
-#content .head-main form .searchbar .searchbtn {
-    width: 35px;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #3375F4;
-    color: #ffffff;
-    font-size: 18px;
-    border: none;
-    outline: none;
-    border-radius: 0 35px 35px 0px;
-    cursor: pointer;
-}
-
 #content .head-main #icn {
     width: 30px;
     display: flex;
@@ -269,6 +231,7 @@ li .list-item .description {
     display: flex;
     align-items: center;
     gap: 6px;
+    margin-right: auto;
 }
 
 #content .head-main .logoo .font{
@@ -461,12 +424,26 @@ li .list-item .description {
 
 .c #chartbar {
     width: 100%;
-    height: 90vb;
+    height: 100%;
 }
 
 .c #piechart {
     width: 100%;
     height: 90vb;
+}
+
+.c #chartbar {
+    width: 100%;
+    height: 100vb;
+}
+/* 
+styling to set table width */
+.dataTables_wrapper{
+    width: 95%;
+}
+
+.text_center {
+    text-align: center;
 }
 
 .title-menu{
@@ -481,12 +458,12 @@ li .list-item .description {
 
 .main_content .analytics-box {
     display: block;
-    width: fit-content;
+    width: 100%;
     padding: 24px;
     border-radius: 20px;
     background: #ffffff;
-    margin: 20px 0;
-    flex-basis: 100%;
+    margin: 10px 0;
+    /* flex-basis: 100%; */
 }
 
 .main_content .analytics-box .analytics1 {
@@ -502,11 +479,21 @@ li .list-item .description {
     gap: 50px;
 }
 
+#chartlinetotal{
+    width: 100%;
+    height: 220px
+}
+
+#chartbartotal{
+    min-width: 100%;
+    height: 220px
+}
+
 .main_content .analytics-box .problem {
     display: flex;
     flex-direction: row;
     padding: 10px;
-    width: fit-content;
+    width: 100%;
 }
 
 table th {
@@ -515,14 +502,16 @@ table th {
 
 .cr {
     margin: auto;
-    /* display: flex; */
-    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-bottom: 10px;
 }
 
 .C-R {
     border-radius: 10px;
-    margin: 20px;
     width: 100%;
+    padding: 0 35px 0 35px;
 }
 
 .conc-recom {
