--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -7,15 +7,12 @@
     }
 
     .chart-grid {
-        width: 90%;
-        /* height: 560px; */
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(100%));
         grid-template-rows: none;
         grid-template-areas:
             "c1 c1 c2 c2"
             "c3 c3 c4 c4";
-        gap: 35px;
         max-height: 100%;
         width: 100%;
     }
@@ -24,17 +21,35 @@
         font-size: 10px;
     }
 
+    .dataTables_length label{
+        font-size: 11px;
+    }
+    
+    .dataTables_length select{
+        max-height: 22px;
+        font-size: 10px;
+    }
+    
+    .dataTables_filter label{
+        font-size: 11px;
+    }
+    
+    .dataTables_filter input{
+        max-height: 20px;
+        font-size: 11px;
+    }
+
     .c td {
         font-size: 10px;
     }
 
     .c th {
-        font-size: 15px;
+        font-size: 11px;
         width: 30%;
     }
 
     .paginate_button {
-        font-size: 13px;
+        font-size: 10px;
     }
 
 }
@@ -134,7 +149,7 @@
     }
 
     .paginate_button {
-        font-size: 13px;
+        font-size: 12px;
     }
 
     .conc-recom li {
