--- a/src/css/style.css
+++ b/src/css/style.css
@@ -386,6 +386,7 @@ li .list-item .description {
     padding: 10px;
     border-radius: 10px;
     gap: 7px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .c label {
@@ -425,6 +426,7 @@ li .list-item .description {
 }
 
 .c #piechart {
+    margin-top: 15px;
     width: 100%;
     height: 90vb;
 }
@@ -509,12 +511,12 @@ styling to set table width */
     padding: 24px;
     border-radius: 20px;
     background: #ffffff;
-    margin: 10px 0;
-    /* flex-basis: 100%; */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .analytics1 h4{
     font-size: 20px;
+    margin-bottom: 10px;
 }
 
 .analytics-box p {
@@ -539,10 +541,13 @@ styling to set table width */
     height: 320px
 }
 
-/* #chartbartotal{
-    min-width: 100%;
-    height: 220px
-} */
+#chartbartotal{
+    margin-bottom: 10px;
+}
+
+#chartlinetotal{
+    margin-bottom: 10px;
+}
 
 .main_content .analytics-box .problem {
     display: flex;
@@ -552,48 +557,43 @@ styling to set table width */
 }
 
 table th {
-    width:25%;
+    width:15%;
 }
 
-.cr {
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
+.C-R .judul-cr {
+    text-align: center;
+    color: #000000;
     margin-bottom: 10px;
-}
-
-.C-R {
-    border-radius: 10px;
-    width: 100%;
-    padding: 0 35px 0 35px;
+    font-size: 20px;
 }
 
 .conc-recom {
-    padding: 0 34px 34px 34px;
+    margin-bottom: 25px;
+}
+
+.conc-recom, .conc-recom2 {
+    padding: 40px;
+    padding-top: 20px;
     text-align: justify;
-    width: 100%;
-    height: 100%;
     border-radius: 20px;
-    background: #4c8cf2;
-    gap: 30px;
+    background: #ffffff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .conc-recom ol {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 5px;
 }
 
 .conc-recom li {
     list-style: inherit;
-    font-weight: 500;
-    color: #ffffff;
+    color: #000000;
 }
 
-.C-R .judul-cr {
-    text-align: center;
-    margin-bottom: 10px;
+.conc-recom2 li {
+    list-style: inherit;
+    color: #000000;
 }
 
 
